# embedded_prolog

./: .gitignore  Cargo.toml  LICENSE  README.md  instruction-set.md  plan.md
comms/: Cargo.toml
comms/src/: lib.rs
comms_derive/: Cargo.toml
comms_derive/src/: lib.rs
prolog_examples/: lists.pl  london-underground.pl  simple.pl
rust_terminal/: Cargo.toml
rust_terminal/src/: main.rs
rust_terminal/src/compiler/: ast.rs  instructions.rs  mod.rs  parser.rs
target_simulator/: Cargo.toml
target_simulator/src/: main.rs  serial.rs
target_tcp_server/: Cargo.toml
target_tcp_server/src/: main.rs
terminal/: Cargo.toml  tcp_terminal.pl
terminal/src/: main.rs  simulator.rs
terminal/src/compiler/: ast.rs  instructions.rs  mod.rs  parser.rs
terminal/terminal/: io.pl  terminal.pl
terminal/terminal/compiler/: assembler.pl  ast_compiler.pl  compiler.pl
terminal/terminal/compiler/assembly_sections/: allocate_functors.pl  remove_labels.pl
terminal/terminal/compiler/compiler_sections/: tokenization.pl
wam/: Cargo.toml
wam/src/: device.rs  device_with_program.rs  device_with_query.rs  errors.rs  hal.rs  hex.rs  io.rs  lib.rs  logging.rs  machine.rs  serializable.rs
wam/src/machine/: basic_types.rs  mod.rs  system_call.rs
wam/src/machine/heap/: integer_operations.rs  mod.rs  structure_iteration.rs
