[package]
name = "comms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = { version = "0.3.2", optional = true }
minicbor = { version = "0.19.0", features = ["derive"] }
sha2 = { version = "0.10.6", default-features = false }

[features]
std = ["minicbor/std", "sha2/std"]
defmt = ["dep:defmt"]
