[package]
name = "comms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = { workspace = true, optional = true }
minicbor = { workspace = true }
sha2 = { version = "0.10.6", default-features = false }

comms_derive = { path = "../comms_derive" }

[features]
std = ["minicbor/std", "sha2/std"]
defmt = ["dep:defmt"]
