[package]
name = "rust_terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
arcstr = "1.1.5"
ariadne = "0.1.5"
chumsky = "0.8.0"
clap = { version = "4.0.29", features = ["derive"] }
cobs = "0.2.3"
crossterm = "0.25.0"
minicbor = { version = "0.19.0", features = ["std", "derive"] }
num-bigint = "0.4.3"
serialport = "4.2.0"
sha2 = { version = "0.10.6", default-features = false }
strsim = "0.10.0"
thiserror = "1.0.37"
