[package]
name = "target_tcp_server"
version = "0.1.0"
authors = ["Samuel Hicks <SamMHicks@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.3.9"
embedded-hal = "0.2.3"
nb = "0.1.2"

wam = { path = "../wam" }
