[package]
name = "wam"
version = "0.1.0"
authors = ["samuel"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cobs = { version = "0.2.3", default-features = false }
defmt = { version = "0.3.2", optional = true }
generic-array = "0.14.6"
log = { version = "0.4.17", optional = true }
minicbor = { version = "0.19.0", features = ["derive"] }

comms = { path = "../comms" }
comms_derive = { path = "../comms_derive" }

[dev-dependencies]
rand = "0.8.5"

[features]
logging = ["dep:log"]
defmt-logging = ["dep:defmt", "comms/defmt"]
std = []
