[package]
name = "wam"
version = "0.1.0"
authors = ["samuel"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cobs = { version = "0.2.3", default-features = false }
defmt = { workspace = true, optional = true }
generic-array = "0.14.6"
log = { workspace = true, optional = true }
minicbor = { workspace = true }

comms = { path = "../comms" }

[dev-dependencies]
rand = "0.8.5"

[features]
logging = ["dep:log"]
defmt-logging = ["dep:defmt", "comms/defmt"]
std = []
